--- a/inc/css/partials/_colors.scss
+++ b/inc/css/partials/_colors.scss
@@ -1,10 +1,19 @@
+$color-font: #515050;
+$color-button: #1B8DE2;
 $color-white: #fff;
-$color-divarea: #eee; 
+$color-black: #000;
+$color-gray-2:#ddd;
 $color-inner-border: #B8BBC3;
 $color-gray: #827E86;
 $color-gray-blue: #434F67;
+$color-gray-dark: #818080;
 $color-link-blue: #3E6C9A;
 $color-light-gray: #FBFBFB;
 $color-orange: #EC7D00; 
+$color-bbg-secondary:rgba(#CADBFF, 0.2);
+$color-dark-blue: #00255D;
+$color-section-border-bottom:#afb4b8;
 
-$font-body: "Trebuchet MS",Arial,Helvetica,sans-serif;
+
+
+$font-body: "Lato", "Trebuchet MS",Arial,Helvetica,sans-serif;
