--- a/inc/css/style.scss
+++ b/inc/css/style.scss
@@ -6,8 +6,11 @@
 
 
 body {
+	background: $color-white;
 	font-family: $font-body;
-	@include bg-image($image-content-bg, no-repeat, center, top);
+	color: $color-font;
+	padding:84px 0px 0px;
+	position: relative;
 }
 
 header {
@@ -23,48 +26,9 @@ header {
 	@include margin-zero;
 	@include border-none;
 	@include border-radius(0px);
-	@include bg-image($image-header-bg, repeat-x, center, center);
+	@include background-image(linear-gradient(top, #3C4B6C 0%, #0E1B33 100%));
 	@include box-shadow(0px 5px 8px rgba(31, 40, 63, 0.4));
 	color: $color-white;
-}
-
-.navbar-header {
-	margin: 17px 0px 0px;
-}
-
-#brand_img{
-	@include padding-zero;
-	margin-left: 0px;
-}
-
-.lang {
-	display: inline-block;
-	padding: 10px 15px;
-	margin: 8px -15px;
-	color: $color-gray;
-	font-size: 16px;
-	@include bg-image($image-arrow-right, no-repeat, left, center);
-}
-
-.login {
-	color: $color-white;
-	font-size: 24px;
-	@include padding-zero;
-}
-
-#maincontainer {
-	margin-top: 0px;
-	padding: 0px;
-	@include box-shadow(0px 0px 38px rgba(0, 0, 0, 0.3));
-	background: none repeat scroll 0% 0% #FFF;
-	&:after {clear: both;}
-}
-
-#inner_nav {
-	@include background-none($color-gray-blue);
-	@include border-none;
-	@include border-radius(0px);
-	padding: 0px 22px 0px 30px;
 	ul{
 		@include ul-li-reset;
 	    li {
@@ -78,28 +42,61 @@ header {
 				line-height: 50px;
 				font-weight: bold;
 				color: rgba( $color-white, 0.6);
+				line-height: 84px;
+				&.active {
+					color: $color-white;
+					background-color: transparent;
+				}
 			}
 	    }
-	    li.active a {
-	    	@include bg-image($image-arrow-up, no-repeat, center, bottom);
-			color: $color-white;
+	}
+}
+
+h1 {
+	font-size: 55px;
+	font-weight:bold;
+	margin: 10px 20px 30px;
+}
+
+h2 {
+	font-weight: 700;
+	color: rgba($color-dark-blue, 0.8);
+	margin: 20px 0px 30px;
+	}
+
+.navbar-header {
+	margin: 17px 0px 0px;
+}
+
+#brand_img{
+	@include padding-zero;
+	margin-left: 0px;
+}
+
+#maincontainer {
+	margin-top: 0px;
+	@include padding-zero;
+	&:after {clear: both;}
+}
+
+#inner_content_container {
+	@include box-shadow(0px 0px 38px rgba(0, 0, 0, 0.3));
+			margin: 0px 15%;
+	.row {
+		@include margin-zero;
+		.col-md-4 {
+			padding: 0px 4%;
 		}
 	}
 }
 
-#inner_content_container {
-	padding: 12px 15px 30px;
-	min-height: 430px;
-}
-
 footer {
-	margin: 30px 0px 0px;
 	padding: 28px 0px;
-	@include border-gray(top);
+	@include background-image(linear-gradient(top, #3C4B6C 0%, #0E1B33 100%));
+	color: $color-white;
 	.row {
 		.col-md-4 {
 			@include padding-zero;
-			color: #827E86;
 			font-size: 10px;
 		}
 	}
@@ -108,6 +105,7 @@ footer {
 #footer-links ul {
 	@include ul-li-reset;
 	color: $color-link-blue;
+
 	li {
 		@include ul-li-reset;
 		&:not(:last-child){
@@ -116,213 +114,232 @@ footer {
 	}
 }
 
-.hiddenContent {
-	display: none;
-}
-
 .area {
-	min-height: 100%;
-	height: 100%;
-	padding: 10px 30px;
-	@include border-radius(6px);
-	background-color: #EEE;
-	h2 {
-		font-weight: 700;
-		font-size: 25px;
+	padding: 10px 20%;
+	margin: 20px 0px 20px;
+	>div {
+		padding: 0px 5%;
 	}
+
 	h4 {
-		margin: 20px 0px;
+		font-weight: bold;
+		margin-bottom: 20px;
 	}
 	.area-img {
 		display: block;
-		margin:20px 20px 20px;
+		@include size(140px auto);
+	}
+	p {
+		color: rgba($color-black, 0.7);
+
 	}
 }
 
-.btn-signup,
-.btn-submit {
-	@include btn-template(big);
-}
-
-.search-sidebar {
-	overflow: hidden;
-	form {
-		padding: 20px 10px 0px;
-		@include border-gray();
-	}
-}
-
-.form-title,
-.search-results-title{
-	font: bold 15px/34px "Trebuchet MS",Verdana,sans-serif;;
-	color: $color-white;
-	padding: 5px 10px;
-	@include background-image(linear-gradient(bottom, #3C4B6C 0%, #0E1B33 100%));
-	@include size(auto 40px);
-	position: relative;
-	vertical-align: top;
-	@include border-top-radius(10px);
-	@include border-top-radius(10px);
-}
-
-
-.form-control {
-	padding: 4px 12px;
-}
-
-.search-dropdown {
-	float:right;
-}
-
-.sort-options {
-	float: left;
-}
-
-.filter {
-	margin-bottom: 20px;
-}
-
-.results-list {
-	>.row {
-	 	position: relative;
-		@include border-gray(top);
-		padding-top: 10px;
-		margin-bottom: 15px;
-	}
-	h4 {
-		font-weight: bold;
-		margin-bottom: 10px;
-	}
-}
-
-.talent-details h4 {
-	margin-top: 0px;
-	a {color: $color-link-blue;}
-}
-
-.job-details h4  {
-	margin-top: 0px;
-	a {color: $color-link-blue;}
-}
-
-.filter-options {
-	padding-top: 10px;
-}
-
-dl {
-	margin-bottom: 4px;
-	font-size: 83%;
-	dd {
-		font-size: 120%;
-	}
-}
-
-.talent-evaluation,
-.job-date {
-	padding-top: 30px;
-}
-
-.btn-talent,
-.btn-job {
-	@include btn-template (medium);
-}
-
-.btn-event {
-	float: right;
-	margin-left: 10px;
-	@include btn-template (medium);
-}
-
-input[type="range"]{
-	margin-bottom: 10px;
-}
-
-.checkbox {
-	margin-right: 15px;
-	input {
-		@include margin-zero;
-		vertical-align: middle;
-		position: relative;
-	}
-}
-
-
-h5 {
-	margin-bottom: 15px;
-}
-
-.skills-required {
-	display: inline-block;
-	@include border-gray();
-	@include border-radius(7px);
-	background: none repeat scroll 0% 0% #FBFBFB;
-}
-
-
-.panel-date {
-	@include box-shadow(0px 5px 5px rgba(0, 0, 0, 0.32));
-	border: 3px solid transparent;
-	@include border-radius(10px);
-	@include size(100px 100px);
-	.panel-heading {
-		@include border-top-radius(10px);
-		@include border-top-radius(10px);
+.btn-link{
+	@include btn-link;
+	&:hover {
+		background: $color-button;
 		color: $color-white;
-		background-color: $color-orange;
-		h3 {
-			font-size: 180%;
-			font-weight: 800;
+		text-decoration: none;
+	}
+}
+
+#home {
+	padding: 30px 0px;
+	border-bottom: 1px solid $color-section-border-bottom;
+	.area {
+		padding: 20px 10px;
+	}
+	.img-thumbnail {
+		border:none;
+	}
+}
+
+#jobbot,
+#events {
+	> div:first-child{
+		margin: 5% auto;
+		@include size(5/12 100%);
+		margin-bottom: -99999px;
+  		padding-bottom: 99999px;
+		img {
+			position:absolute;
+			right:100%;
 		}
 	}
-	.panel-body {
-		font-size: 160%;
-		padding-top: 5px;
-		font-weight: 800;
+}
+
+#talentpool {
+	> div:first-child{
+		margin: 5% auto;
+		@include size(5/12 100%);
+		margin-bottom: -99999px;
+  		padding-bottom: 99999px;
+		img {
+			position:absolute;
+			left:100%;
+		}
 	}
 }
 
-
-.upcoming,
-.finished {
-	@include label-event;
+#jobbot {
+	overflow: hidden;
+	border-top: 2px solid $color-white;
+	border-bottom: 1px solid $color-section-border-bottom;
+	background-color: $color-bbg-secondary;
+	.jobbot-img {
+		
+	}
 }
 
-.event-details {
-	padding: 0px 20px;
-	margin-bottom: 10px;
+#talentpool{
+	overflow: hidden;
+	padding:15px 0px;
+	@include margin-zero;
+	border-top: 2px solid $color-white;
+	border-bottom: 1px solid $color-section-border-bottom;
 }
 
-#events-options .form-group{
-	margin-right: 10px;
+#events{
+	overflow: hidden;
+	border-top: 2px solid $color-white;
+	border-bottom: 2px solid $color-section-border-bottom;
+	background-color: $color-bbg-secondary;
+	.events-info {
+		border-bottom: 1px solid $color-section-border-bottom;
+		margin: 0px 0px 30px;
+		padding-bottom: 10px;
+	}
+	.next-event {
+		padding:20px 0px 0px;
+		.panel-date {
+			@include box-shadow(0px 3px 3px rgba(0, 0, 0, 0.32));
+			border: 3px solid transparent;
+			@include border-radius(10px);
+			@include size(70px 70px);
+			.panel-heading {
+				padding: 8px 15px;
+				@include border-top-radius(10px);
+				@include border-top-radius(10px);
+				color: $color-white;
+				background-color: $color-orange;
+				h3 {
+					font-size: 120%;
+					font-weight: 800;
+				}
+			}
+			.panel-body {
+				font-size: 120%;
+				padding-top: 3px;
+				font-weight: 700;
+			}
+		}
+		.event-details{
+			margin-bottom: 10px;
+			h3 {margin-top: 0px;}
+			p{font-style: italic;}
+			padding: 0px 20px;
+			
+		}
+	}
 }
 
-.events-subscribe {
-	display: block;
-	padding: 20px 10px;
-	margin: 20px 0;
-	background: $color-white;
-	@include border-gray(top);
-	@include border-gray(bottom);
-	.input-group{
-		.form-control{
+#stats{
+	line-height: 1.5;
+	padding: 30px 15px;
+	.container {width:90%;}
+	.job-stats {
+		color: $color-gray-dark;
+		margin: 40px auto 0;
+		padding: 0 0 80px;
+		list-style: none;
+		@include border-gray(bottom);
+		li {
 			float: none;
-			@include size(auto 44px);
+			border-bottom: 0;
+			border-right: 1px solid $color-gray-2;
+			padding-top: 25px;
+			padding-bottom: 25px;
+			font-size: 18px;
+			display: inline-block;
+			strong{
+				font-size: 38px;
+				line-height: 38px;
+				font-weight: 400;
+				display: block;
+			}
 		}
-		.btn{
-			padding: 11px 12px;;
-		}
+	}
+	p {
+		margin: 30px 0px;
 	}
 }
 
-#subscribe { 
-	margin:0 auto;
+
+.right {
+	text-align: right;
+	> div {
+		float:right;
+	}
 }
+
+
+.left {
+	text-align: left;
+	> div {
+		float:left;
+	}
+}
+
 
 @media only screen and (max-width: 768px) {
+
+	.area {
+		padding: 10px 5%;
+		@include margin-zero;
+	}
+
+	#events {
+		.next-event{
+			.panel-date {
+				width:100%;
+			}
+		}
+	}
 
 	#main_nav_collapsed{
 		position: relative;
 		z-index: 1;
 		background: $color-white;
+		color: #00255D;
 	}
+
+	#inner_content_container {
+		@include margin-zero;
+	}
+	.left > div, .right > div {
+		text-align:center;
+		float:none;
+	}
+
+	#jobbot,
+	#events,
+	#talentpool {
+		> div:first-child{
+			img {
+				position:relative;
+			}
+		}
+	}
+
+	#stats {
+		.job-stats {
+			@include padding-zero;
+			li{
+				padding-top:0px;
+				border:none;
+			}
+	}
+
+}
 }
